수납 - 수납슬롯선정 api 호출

--- a/webserver/views/input/input_item_error.html
+++ b/webserver/views/input/input_item_error.html
@@ -15,6 +15,7 @@
                 <div id="put_error">
                     <p></p>
                 </div>
+                <h2>택배를 다시 입고해주세요<h2>
                 <button class="btn-small" id="cancle_btn" onclick="send_stop_info()">입고 취소</button>
                 <button class="btn-small" id="home_btn"><a href="/">처음으로</a></button>
             </div>
