--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -38,7 +38,7 @@
          
     }).catch(err => {
         console.log(err);
-        alert(err.response.data.error)
+        alert(err.response.data.error);
     });
 
 </script>
