Develop: Polish HTML

--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -6,7 +6,7 @@
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" ;style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white; display: ">
     <h2 class="sub-right-title">송장이 위로 향하게 투입해주세요!</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec">
