--- a/webserver/views/output/regist_address_error.html
+++ b/webserver/views/output/regist_address_error.html
@@ -6,7 +6,7 @@
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" ;style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white; display: ">
     <h2 class="sub-right-title">수령인 불일치</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec">
