--- a/webserver/views/input/cancel_input_item.html
+++ b/webserver/views/input/cancel_input_item.html
@@ -6,7 +6,7 @@
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" ;style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white; display: ">
     <h2 class="sub-right-title">아이콘</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec">
