--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -6,15 +6,15 @@
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" ;style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white; display: ">
     <h2 class="sub-right-title">아이콘</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec">
             <div class="board-top-search" style="float: left;">
                 <p>택배 입고가 완료되었습니다.</p>
                 <p>추가 입고 하시겠습니까?</p>
-                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/input/regist_delivery">예</a></button>
-                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/">아니요</a></button>
+                <button class="btn-small" style="margin-top: 30px;"><a href="/input/regist_delivery">예</a></button>
+                <button class="btn-small" style="margin-top: 30px;"><a href="/">아니요</a></button>
 
             </div>
 
@@ -27,7 +27,7 @@
     axios.post('/input/input').then(res => {
         console.log(res.data);
 
-        if(res.data.status == 200){
+        if(res.data.status === 200){
             console.log("완료")
             setTimeout(function(){
                 location.href='/';
