--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -24,16 +24,22 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script>
+    let url = new URL(window.location.href);
+    let deliveryId = url.searchParams.get("deliveryId");
+    let ownerId = url.searchParams.get("ownerId");
+
     /* 택배 투입 */
-    axios.post('/input/submit_item').then(res => {
-        if(res.data.status == 200){
+    axios.post('/input/submit_item').then(axiosResult => {
+        let response = axiosResult.data;
+        if(response.status === 200){
             // **제거
             setTimeout(function(){
-                location.replace(res.data.data);
+                let redirectUrl = response.data + "?deliveryId=" + deliveryId + "&ownerId=" + ownerId;
+                location.replace(redirectUrl);
             }, 5000)
         } else{
-            console.log(res.data.errpr);
-            alert(res.data.error)
+            console.log(response.error);
+            alert(response.error)
         }
     }).catch(err => {
         console.log(err);
@@ -49,7 +55,7 @@
         });
 
         axios.post('/input/stop_input', request).then(res => {
-            if(res.data.status == 200){
+            if(res.data.status === 200){
                 alert('입고를 취소하셨습니다.');
                 location.href='/input/cancel_input_item'
             } else{
