Debug: Fix input database errors
- 입고 2회 시 같은 슬롯을 두 번 쓰는 문제 해결
- id 2번 트레이를 사용했는데 id가 2인 슬롯의 tray_id가 null이 되는 문제 해결

--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -29,14 +29,11 @@
     let ownerId = url.searchParams.get("ownerId");
 
     /* 택배 투입 */
-    axios.post('/input/submit_item').then(axiosResult => {
+    axios.post(`/input/submit_item?deliveryId=${deliveryId}&ownerId=${ownerId}`).then(axiosResult => {
         let response = axiosResult.data;
         if(response.status === 200){
-            // **제거
-            setTimeout(function(){
-                let redirectUrl = response.data + "?deliveryId=" + deliveryId + "&ownerId=" + ownerId;
-                location.replace(redirectUrl);
-            }, 5000)
+            let redirectUrl = `${response.data}?deliveryId=${deliveryId}&ownerId=${ownerId}`;
+            location.replace(redirectUrl);
         } else{
             console.log(response.error);
             alert(response.error)
