트랜잭션 수정

--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -6,7 +6,7 @@
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white; ">
     <h2 class="sub-right-title">아이콘</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec">
@@ -23,6 +23,10 @@
 </div>
 
 <script>
+    setTimeout(function(){
+        location.href='/';
+    }, 8000);
+        
     // TODO - 삭제
     /* 입고 */
     // axios.post('/input/input').then(res => {
