--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -1,62 +1,54 @@
 {{define "main"}}
 {{template "header" .}}
-<style>
-    #my_modal {
-        display: none;
-        padding: 20px 60px;
-        background-color: rgb(2, 26, 2);
-        border: 1px solid #888;
-        border-radius: 3px;
-        color: rgb(255, 174, 0);
-        font-size: xx-large;
-        font-weight: bold;
-        text-align: center;
-    }
 
-    #my_modal .modal_close_btn {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-    }
-</style>
+
 <body>
-	  <div class="wrap">
-        <div id="container">
-
-            <div class="main-page">
-                <!-- <div class="main-bg"></div>
-                <div class="main-con"></div> -->
-            </div>
-
-            <div class="sub-right">
-                <h2 class="sub-right-title">무인 택배 보관함</h2>
-                <div class="sub-right-con">
-                    <div class="sub-con-sec">
-                        <div class="board-top-search" style="float: left">
-                            <button class="btn-small" id="popup_open_btn">택배 입고</button>
-                            <button class="btn-small" id="output_item_btn"><a href="output/regist_address">택배 찾기</a></button>
-                        </div>
-                    </div>
-                </div>
+    <div class="popup-layer" style="display: none;" id="my_modal">
+        <div class="popup-box msg-box">
+            <div class="popup-body">
+                <p class="msg">변질과 파손 우려 물품은 입고 자제 바랍니다.
+                <a class="modal_close_btn" style="color:#fff ;text-decoration: none; font-size:medium; font-weight: 300;" href="input/regist_delivery">닫기</a>
+                </p>
             </div>
         </div>
     </div>
-
-    <div id="my_modal">
-        변질과 파손<br/>
-        우려 물품은<br/>
-        입고 자제<br/>
-        바랍니다.<br/>
-    <a class="modal_close_btn" style="color:#fff ;text-decoration: none; font-size:medium; font-weight: 300;" href="input/regist_delivery">닫기</a>    
+    <div class="wrap">
+        <header id="header">
+            <div class="header-wrap">
+                <p class="greeting">안녕하세요</p>
+                <p class="address">대전 OO아파트 2차 101동 1-4 라인</p>
+                <p class="datetime">2023년 9월 13일 16:12</p>
+            </div>
+        </header>
+        <main id="main">
+            <div class="content-wrap">
+                <div class="banner">
+                    <div class="title-wrap">
+                        <p class="title">URCC</p>
+                        <p class="sub-title">It Contains Everything</p>
+                    </div>
+                </div>
+                <div class="btn-wrap">
+                    <div class="btn" id="popup_open_btn">
+                        <img src="/static/images/ico_find.png" alt="">
+                        <p class="btn-title">택배<br>입고</p>
+                    </div>
+                    <div class="btn" id="output_item_btn">
+                        <img src="/static/images/ico_parcel_white.png" alt="">
+                        <p class="btn-title">택배<br>찾기</p>
+                    </a>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
 
 <script>
-    let intervalId;
+    /*let intervalId;
     setTimeout(function(){
         intervalId = setInterval(sort, 4000);
-    }, 10000);
+    }, 10000); */
 
     function sort(){
         axios.post('/sort').then(res => {
@@ -69,63 +61,17 @@
         });
     }
 
-    function modal(id) {
-        let zIndex = 9999;
-        let modal = document.getElementById(id);
-
-        // 모달 div 뒤에 레이어
-        let bg = document.createElement('div');
-        bg.setStyle({
-            position: 'fixed',
-            zIndex: zIndex,
-            left: '0px',
-            top: '0px',
-            width: '100%',
-            height: '100%',
-            overflow: 'auto',
-            // 레이어 색깔
-            backgroundColor: 'rgba(0,0,0,0.4)'
-        });
-        document.body.append(bg);
-
-        // 닫기 버튼 처리, 레이어와 모달 div 지우기
-        modal.querySelector('.modal_close_btn').addEventListener('click', function() {
-            bg.remove();
-            modal.style.display = 'none';
-        });
-
-        modal.setStyle({
-            position: 'fixed',
-            display: 'block',
-            boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)',
-
-            // 시꺼먼 레이어 보다 한칸 위에 보이기
-            zIndex: zIndex + 1,
-
-            // div center 정렬
-            top: '50%',
-            left: '50%',
-            transform: 'translate(-50%, -50%)',
-            msTransform: 'translate(-50%, -50%)',
-            webkitTransform: 'translate(-50%, -50%)'
-        });
-    }
-
-    // Element 에 style 한번에 오브젝트로 설정하는 함수 추가
-    Element.prototype.setStyle = function(styles) {
-        for (let k in styles) this.style[k] = styles[k];
-        return this;
-    };
-
     popup_open_btn.onclick = () => {
-        // 정리 종료
-        //clearInterval(intervalId);
-
         // 모달창 띄우기
-        modal('my_modal');
+        document.getElementById("my_modal").style.display = 'block'
+
         setTimeout(function(){
             location.href="input/regist_delivery"
         }, 2000);
+    };
+
+    output_item_btn.onclick = () => {
+        location.href="output/regist_address"
     };
 
 </script>
