수납 - 디자인 적용

--- a/webserver/views/header.html
+++ b/webserver/views/header.html
@@ -11,8 +11,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/common.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/layout1.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/index.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/layout.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
     <!-- 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -83,6 +83,16 @@
         }
     </script>
 </head>
+
+<body>
+    <div class="wrap">
+        <header id="header">
+            <div class="header-wrap">
+                <p class="greeting">안녕하세요</p>
+                <p class="address">대전 OO아파트 2차 101동 1-4 라인</p>
+                <p class="datetime">2023년 9월 13일 16:12</p>
+            </div>
+        </header>
 
 
 {{end}}
