--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -2,24 +2,6 @@
 {{template "header" .}}
 
 
-<body>
-    <div class="popup-layer" style="display: none;" id="my_modal">
-        <div class="popup-box msg-box">
-            <div class="popup-body">
-                <p class="msg">변질과 파손 우려 물품은 입고 자제 바랍니다.
-                <a class="modal_close_btn" style="color:#fff ;text-decoration: none; font-size:medium; font-weight: 300;" href="input/regist_delivery">닫기</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="wrap">
-        <header id="header">
-            <div class="header-wrap">
-                <p class="greeting">안녕하세요</p>
-                <p class="address">대전 OO아파트 2차 101동 1-4 라인</p>
-                <p class="datetime">2023년 9월 13일 16:12</p>
-            </div>
-        </header>
         <main id="main">
             <div class="content-wrap">
                 <div class="banner">
@@ -40,6 +22,14 @@
                 </div>
             </div>
         </main>
+    </div>
+
+    <div class="popup-layer" style="display: none;" id="my_modal">
+        <div class="popup-box msg-box">
+            <div class="popup-body">
+                <p class="msg">변질과 파손 우려 물품은 입고 자제 바랍니다.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
