--- a/webserver/views/input/cancel_input_item.html
+++ b/webserver/views/input/cancel_input_item.html
@@ -1,22 +1,25 @@
 {{define "input/cancel_input_item"}}
 {{template "header" .}}
 
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div class="sub-right" style="background-color: white;">
-    <h2 class="sub-right-title">아이콘</h2>
-    <div class="sub-right-con">
-        <div class="sub-con-sec">
-            <div class="board-top-search" style="float: left;">
-                <p>택배 입고가 취소되었습니다.</p>
-                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/">처음으로</a></button>
+        <main id="main">
+            <div class="content-wrap">
+                <div class="fixed-btn">
+                    <button class="btn-normal"><a href="/">첫 화면으로</a></button>
+                </div>
+                <!-- 입고 취소 -->
+                <div class="msg-wrap">
+                    <div class="msg-body">
+                        <div class="img-wrap">
+                            <img src="/static/images/ico_cancel.png" alt="">
+                        </div>
+                        <p class="msg">택배 입고가 취소되었습니다.</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </main>
     </div>
-</div>
+</body>
+</html>
 
 <script>
     setTimeout(function(){
