--- a/webserver/views/output/item_list.html
+++ b/webserver/views/output/item_list.html
@@ -1,71 +1,82 @@
 {{define "output/item_list"}}
 {{template "header" .}}
 
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div class="sub-right" style="background-color: white;">
-    <h2 class="sub-right-title">귀하의 호수</h2>
-    <div id="address">
-    </div>
-    <div class="sub-right-con">
-        <div class="sub-con-sec">
-            <form action="/output/ongoing" method="post">
-                <table style="border: 2px solid; width:100%; text-align: center;">
-                    <thead id="$thead">
-                    <tr>
-                        <th style="padding: 10px;"><i class="fa fa-check"></i>선택</th>
-                        <th style="padding: 10px;">택배사</th>
-                        <th style="padding: 10px;">운송장 번호</th>
-                        <th style="padding: 10px;">입고 일시</th>
-                    </tr>
-                    </thead>
-                    <tbody id="$tbody">
-                    </tbody>
-                </table>
-                <div class="board-top-search" style="float: left;">
-                    <button type="button" class="btn-small" id="$output_request_btn">선택 찾기</button>
-
-                    <button type="button" class="btn-small" id="$back_btn"><a href="/output/regist_address">이전으로</a></button>
-                    <button type="button" class="btn-small" id="$home_btn"><a href="/">처음으로</a></button>
+        <main id="main">
+            <div class="content-wrap">
+                <div class="fixed-btn">
+                    <button class="btn-normal"><a href="/output/regist_address">이전 화면으로</a></button>
+                    <button class="btn-normal"><a href="/">첫 화면으로</a></button>
                 </div>
-            </form>
-
-        </div>
+                <div class="list-box">
+                    <form action="/output/ongoing" method="post">
+                        <div class="list-top">
+                            <p class="title">귀하의 호수</p>
+                            <div id="address"><p class="value"></p></div>
+                        </div>
+                        <div class="list-tbl-wrap">
+                            <table class="list-tbl">
+                                <colgroup>
+                                    <col width="10%">
+                                    <col width="22%">
+                                    <col width="33%">
+                                    <col width="35%">
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>택배사</th>
+                                        <th>운송장번호</th>
+                                        <th>입고 일시</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody">
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- <p class="list-count"><span></span>개 선택</p> -->
+                    
+                        <div class="btn-wrap">
+                            <button class="btn-normal" id="$output_request_btn">택배 찾기</button>
+                        </div>
+                    </form>
+                </div> 
+            </div>
+        </main>
     </div>
-</div>
+</body>
+</html>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const address = urlParams.get('address');
 
+    data = `<p class="value">${address}호</p>`;
+
+    $('#address').html(data);
+
     // db에서 유저 호수와 택배 리스트 가져오기
     axios.get('/output/get_item_list?address=' + address)
         .then(axiosResult => {
-            let itemListResponses = axiosResult.data.data;
-            console.log(itemListResponses);
+            let itemListResponses = axiosResult.data.data;            
+            let tr = '';
             itemListResponses.forEach(item => {
-                let tr = createElementFromHtml(`
-                    <table>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="item_id" value="${item.item_id}">
-                            </td>
-                            <td>${item.delivery_company}</td>
-                            <td>${item.tracking_number}</td>
-                            <td>${item.input_date}</td>
-                        </tr>
-                    </table>
-                `);
-
-                $tbody.append(tr.querySelector('tr'));
+                tr += `
+                    <tr>
+                        <td>
+                            <div class="chk-item">
+                                <input type="checkbox" id="chk${item.item_id}" name="item_id" value="${item.item_id}">
+                                <label for="chk${item.item_id}" class="label-cb"></label>
+                            </div>
+                        </td>
+                        <td>${item.delivery_company}</td>
+                        <td>${item.tracking_number}</td>
+                        <td>${item.input_date}</td>
+                    </tr>
+                `;
             });
+            $('#tbody').html(tr);
         })
         .catch(err => {
             console.error(err)
@@ -84,7 +95,6 @@
             alert("찾을 물품을 하나 이상 선택해주세요.");
             return false;
         }
-
         e.target.closest('form').submit();
     };
 
