--- a/webserver/views/output/item_output_accept.html
+++ b/webserver/views/output/item_output_accept.html
@@ -1,26 +1,30 @@
 {{define "output/item_output_accept"}}
 {{template "header" .}}
 
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div>
-    <div>
-        택배를 꺼내 주세요.
+        <main id="main">
+            <div class="content-wrap">
+                <div class="fixed-btn">
+                    <button class="btn-normal" id="$takeout_btn">(임시) 물건 꺼내기</button>
+                </div>
+                <!-- 택배 꺼내기 -->
+                <div class="msg-wrap">
+                    <div class="msg-body">
+                        <div class="img-wrap">
+                            <img src="/static/images/ico_receive.png" alt="">
+                        </div>
+                        <p class="msg">택배를 꺼내 주세요</p>
+                        <p class="green time-msg">5초 뒤 자동으로 재입고 됩니다.</p>
+                        <p class="time-count" >
+                            <span id="$counter">5</span>
+                        </p>
+                    </div>
+                </div>
+                
+            </div>
+        </main>
     </div>
-    <div>
-        5초 뒤 자동으로 재입고 됩니다.
-    </div>
-    <div id="$counter">
-        5
-    </div>
-    <button id="$takeout_btn">(임시) 물건 꺼내기</button>
-</div>
+</body>
+</html>
 
 <script>
     const url = new URL(window.location.href);
