--- a/webserver/views/output/item_output_canceled.html
+++ b/webserver/views/output/item_output_canceled.html
@@ -1,18 +1,25 @@
 {{define "output/item_output_canceled"}}
 {{template "header" .}}
 
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div>
-    <div>택배 찾기가 취소되었습니다.</div>
-    <a href="/">첫 화면으로</a>
-</div>
+        <main id="main">
+            <div class="content-wrap">
+                <div class="fixed-btn">
+                    <button class="btn-normal"><a href="/">첫 화면으로</a></button>
+                </div>
+                <!-- 택배 찾기 취소 -->
+                <div class="msg-wrap">
+                    <div class="msg-body">
+                        <div class="img-wrap">
+                            <img src="/static/images/ico_cancel.png" alt="">
+                        </div>
+                        <p class="msg">택배 찾기가 취소되었습니다.</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</body>
+</html>
 
 <script>
 
