--- a/webserver/views/output/item_output_ongoing.html
+++ b/webserver/views/output/item_output_ongoing.html
@@ -1,16 +1,22 @@
 {{define "output/item_output_ongoing"}}
 {{template "header" .}}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div>
-    택배 나오는 중 ...
-</div>
+        <main id="main">
+            <div class="content-wrap">
+                <!-- 택배 받기 로딩 -->
+                <div class="msg-wrap">
+                    <div class="msg-body">
+                        <div class="img-wrap">
+                            <img src="/static/images/ico_complete.png" alt="">
+                        </div>
+                        <p class="msg">택배 나오는 중 …</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</body>
+</html>
 
 <script>
 
