--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -1,25 +1,42 @@
 {{define "output/item_output_password_form"}}
 {{template "header" .}}
 
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
-<div class="main-page" style="display: none;">
-    <!-- <div class="main-bg"></div>
-    <div class="main-con"></div> -->
-</div>
-
-<div>
-    <label for="$password_input">
-        아래의 정보를 입력 혹은 입주민 카드를 태그하세요
-    </label>
-    <input id="$password_input" type="password" name="password">
-    <div>
-        귀하의 호수: {{.Address}}
+        <main id="main">
+            <div class="content-wrap">
+                <div class="list-box">
+                    <div class="list-title">비밀번호 입력하거나 입주민 카드를 태그해주세요</div>
+                    <div class="list-top">
+                        <p class="title">귀하의 호수</p>
+                        <p class="value">{{.Address}}호</p>
+                    </div>
+                    <div class="list-top">
+                        <p class="title">비밀번호</p>
+                        <p class="value"><input type="password" id="$password_input"></p>
+                    </div>
+                    <div class="number-input" id="number_keypad">
+                        <button class="number" value="1">1</button>
+                            <button class="number" value="2">2</button>
+                            <button class="number" value="3">3</button>
+                            <button class="number" value="4">4</button>
+                            <button class="number" value="5">5</button>
+                            <button class="number" value="6">6</button>
+                            <button class="number" value="7">7</button>
+                            <button class="number" value="8">8</button>
+                            <button class="number" value="9">9</button>
+                            <button></button>
+                            <button class="number" value="0">0</button>
+                            <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+                    </div>
+                    <div class="btn-wrap">
+                        <button class="btn-normal" id="$submit_btn">입력 완료</button>
+                        <button class="btn-normal" id="$cancel_btn">취소</button>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-    <button id="$submit_btn" type="button">완료</button>
-    <button id="$cancel_btn" type="button">취소</button>
-</div>
+</body>
+</html>
 
 <script>
     const url = new URL(window.location.href);
@@ -52,5 +69,33 @@
             })
         window.location.replace('/')
     }
+
+    let input = '$password_input'
+    let password_list = [];
+
+    $password_input.onclick  = () => {
+        $password_input.focus();
+        input = $(":focus").attr('id')
+        console.log(input)
+    };
+
+    $('.number').click(function(){
+        number = $(this).attr('value');
+        if (input == '$password_input') {
+            password_list.push(number)
+            password = password_list.join('');
+            console.log(password)
+            document.getElementById("$password_input").value = password;
+        } 
+    });
+
+    backspace.onclick = () => {
+        if (input == '$password_input') {
+            password_list.pop()
+            password = password_list.join('');
+            document.getElementById("$password_input").value = password;
+        }
+    };
+
 </script>
 {{end}}
