--- a/webserver/views/output/regist_address.html
+++ b/webserver/views/output/regist_address.html
@@ -1,23 +1,40 @@
 {{define "output/regist_address"}}
 {{template "header" .}}
 
-<div class="sub-right">
-    <div class="sub-right-con">
-        <div class="sub-con-sec join-sec">
-            <div class="form-wrap">
-                <div style="margin-bottom: 30px;">아래의 정보를 입력하세요</div>
-                <div class="input-item">
-                    <label for="$address">귀하의 호수</label>
-                    <input type="text" id="$address">
+    <main id="main">
+        <div class="content-wrap">
+            <div class="fixed-btn">
+                <button class="btn-normal" id="$cancel_btn"><a href="/"></a>첫 화면으로</button>
+            </div>
+            <div class="list-box">
+                <div class="list-title">아래의 정보를 입력해 주세요</div>
+                <div class="list-top">
+                    <p class="title">귀하의 호수</p>
+                    <p class="value"><input type="number" id="$address" value="">호</p>
+                </div>
+                <div class="number-input" id="number_keypad">
+                    <button class="number" value="1">1</button>
+                        <button class="number" value="2">2</button>
+                        <button class="number" value="3">3</button>
+                        <button class="number" value="4">4</button>
+                        <button class="number" value="5">5</button>
+                        <button class="number" value="6">6</button>
+                        <button class="number" value="7">7</button>
+                        <button class="number" value="8">8</button>
+                        <button class="number" value="9">9</button>
+                        <button></button>
+                        <button class="number" value="0">0</button>
+                        <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+                </div>
+                <div class="btn-wrap">
+                    <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
                 </div>
             </div>
-            <div class="btn-wrap">
-                <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
-                <button class="btn-small" id="$cancel_btn">처음으로</button>
-            </div>
         </div>
+    </main>
     </div>
-</div>
+</body>
+</html>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -36,12 +53,39 @@
         })
         .catch(err => {
             if (err.response.status === 404) {
+                
                 alert('보관된 택배가 없습니다.');
             } else {
                 console.error(err);
             }
         });
     }
+
+    let input = '$address'
+    let address_list = [];
+
+    $address.onclick  = () => {
+        $address.focus();
+        input = $(":focus").attr('id')
+    };
+
+    $('.number').click(function(){
+        number = $(this).attr('value');
+        if (input == '$address') {
+            address_list.push(number)
+            address = address_list.join('');
+            document.getElementById("$address").value = address;
+        } 
+    });
+
+    backspace.onclick = () => {
+        if (input == '$address') {
+            address_list.pop()
+            address = address_list.join('');
+            document.getElementById("$address").value = address;
+        }
+    };
+
 
 </script>
 {{end}}
